--- a/YingCaiAi/YingCaiAiWin/Views/Pages/KnowledgeBase.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/KnowledgeBase.xaml
@@ -49,13 +49,14 @@
                 <hc:ComboBox
                     Grid.Column="1"
                     x:Name="StatusFilter"
-                    hc:InfoElement.Placeholder="选择文件"
+                    hc:InfoElement.Placeholder="选择状态"
                     Width="170"
                     Margin="0,0,20,0"
-                    SelectedIndex="0"
+                    SelectedIndex="{Binding ViewModel.Documents.Status}"
                     >
                     <ComboBoxItem Content="全部" />
-                    <ComboBoxItem Content="管理员" />
+                    <ComboBoxItem Content="已入库" />
+                    <ComboBoxItem Content="待审核" />
                 </hc:ComboBox>
                 
                 <Button 
@@ -66,7 +67,6 @@
                     Style="{StaticResource ButtonPrimary}"
                     hc:IconElement.Width="16"
                     Margin="10,0,20,0"
-                    
                     Command="{Binding ViewModel.SerachCommand, Mode=OneWay}"
                     CommandParameter="DialogsAndFlyouts" />
                 <Button 
@@ -100,7 +100,7 @@
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
                    ItemsSource="{Binding ViewModel.Docs, Mode=OneWay}"
-                   Height="570"
+                   Height="620"
                     >
                 
 
@@ -226,116 +226,5 @@
         </Grid>
 
 
-        <hc:Dialog 
-            x:Name="UserDialog"
-            Width="800"
-            MinHeight="600"
-            Style="{StaticResource DialogBaseStyle}">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-
-                <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="基本信息" FontSize="16" FontWeight="Bold" Foreground="{DynamicResource PrimaryBrush}" Margin="-277,0,-132,16" />
-
-                <hc:TextBox Grid.Column="0"
-                    x:Name="UsernameTextBox"
-                    hc:InfoElement.Placeholder="用户名"
-                    hc:InfoElement.TitleWidth="0"
-                    hc:InfoElement.Necessary="True"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="-305,6,50,84" Grid.Row="1" />
-
-                <hc:TextBox Grid.Column="1"
-                    x:Name="FullNameTextBox"
-                    hc:InfoElement.Placeholder="姓名"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="4,6,-290,84" Grid.Row="1" />
-
-                <hc:TextBox
-                    Grid.Row="1"
-                    x:Name="EmailTextBox"
-                    hc:InfoElement.Placeholder="邮箱"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="-305,74,59,30" Grid.RowSpan="3" />
-
-                <hc:TextBox
-                    Grid.Row="1" Grid.Column="1"
-                    x:Name="DepartmentTextBox"
-                    hc:InfoElement.Placeholder="部门"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="4,74,-290,21" />
-
-                <hc:TextBox
-                    Grid.Row="2"
-                    x:Name="PositionTextBox"
-                    hc:InfoElement.Placeholder="职位"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="-305,3,59,70" Grid.RowSpan="3" />
-
-                <hc:ProgressButton
-                    Grid.Row="4"
-                    x:Name="IsActiveToggle"
-                    
-                    Style="{StaticResource ToggleButtonSwitch}"
-                    Margin="52,6,-106,64" Grid.Column="1" />
-
-
-                <TextBlock Grid.Row="4" Grid.ColumnSpan="2" Text="分配角色" FontSize="16" FontWeight="Bold" Foreground="{DynamicResource PrimaryBrush}" Margin="-305,53,-132,33" />
-
-                <Border Grid.Row="6" Grid.ColumnSpan="2" 
-                        BorderBrush="{DynamicResource BorderBrush}" 
-                        BorderThickness="1" 
-                        CornerRadius="4"
-                        Margin="0,0,0,0">
-                    <ListBox
-                        x:Name="RolesListBox"
-                        SelectionMode="Multiple"
-                        BorderThickness="0"
-                        Background="Transparent" Margin="-321,-31,-279,-55">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <CheckBox
-                                    Content="{Binding Name}"
-                                    IsChecked="{Binding IsSelected, Mode=TwoWay}"
-                                    Tag="{Binding Id}"
-                                    Margin="8,8" />
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Border>
-
-
-                <StackPanel Grid.Row="8" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,16,0,0">
-                    <Button
-                        Content="取消" 
-                        Style="{StaticResource ButtonDefault}"
-                        Command="{Binding ViewModel.AddUsersCommand, Mode=OneWay}"
-  CommandParameter="DialogsAndFlyouts" RenderTransformOrigin="0.57,5.346" />
-                    <Button
-                        Content="保存" 
-                        Style="{StaticResource ButtonPrimary}" 
-                        Command="{Binding ViewModel.AddUsersCommand, Mode=OneWay}"
-  CommandParameter="DialogsAndFlyouts" />
-                </StackPanel>
-            </Grid>
-        </hc:Dialog>
     </Grid>
 </Page>
