--- a/YingCaiAi/YingCaiAiWin/Views/Pages/UsersPage.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/UsersPage.xaml
@@ -48,13 +48,15 @@
                 <hc:ComboBox
                     Grid.Column="1"
                     x:Name="StatusFilter"
-                    hc:InfoElement.Placeholder="选择文件"
+                    hc:InfoElement.Placeholder="选择角色"
                     Width="170"
                     Margin="0,0,20,0"
-                    SelectedIndex="0"
+                    SelectedIndex="{Binding ViewModel.UserSer.Role}"
                     >
-                    <ComboBoxItem Content="全部" />
+                    <ComboBoxItem Content="全部" IsSelected="True" />
                     <ComboBoxItem Content="管理员" />
+                    <ComboBoxItem Content="员工"/>
+                    <ComboBoxItem Content="演示" />
                 </hc:ComboBox>
 
                 <Button 
@@ -77,7 +79,7 @@
                   hc:IconElement.Width="16"
                   Margin="10,0,12,0"
                   Command="{Binding ViewModel.ShowUserDialogCommand}"
-                  CommandParameter="3"
+                  CommandParameter="{Binding  ViewModel.IntId}"
                    />
 
             </Grid>
@@ -101,7 +103,7 @@
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
                    ItemsSource="{Binding ViewModel.UsersList, Mode=OneWay}"
-                   Height="570"
+                   Height="620"
                     >
                     <DataGrid.CellStyle>
                         <Style TargetType="DataGridCell">
@@ -171,7 +173,7 @@
                                             FontSize="12"
                                             Padding="8,4"
                                             Margin="0,0,8,0"
-                                            Command="{Binding ViewModel.EditUserCommand, RelativeSource={RelativeSource AncestorType=local:UsersPage}}"
+                                            Command="{Binding ViewModel.ShowUserDialogCommand, RelativeSource={RelativeSource AncestorType=local:UsersPage}}"
                                             CommandParameter="{Binding  Id}"
                                             />
                                         <Button
@@ -211,16 +213,6 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-
-                <!--<TextBlock Grid.Column="0" Text="共  条记录" VerticalAlignment="Center" Foreground="{DynamicResource SecondaryTextBrush}" />-->
-
-                <!--<hc:Pagination 
-                    Grid.Column="2" 
-                    MaxPageCount="2"
-                    DataCountPerPage="5"
-                    PageIndex="{Binding ViewModel.CurrentPage}"
-                    IsJumpEnabled="False"
-                    />-->
                 <hc:Pagination MaxPageCount="{Binding ViewModel.PageCount}" PageIndex="{Binding ViewModel.CurrentPage}" IsJumpEnabled="True">
                     <hc:Interaction.Triggers>
                         <hc:EventTrigger EventName="PageUpdated">
@@ -230,117 +222,6 @@
                 </hc:Pagination>
             </Grid>
         </Grid>
-        
-        <hc:Dialog 
-            x:Name="UserDialog"
-            Width="800"
-            MinHeight="600"
-            Background="White">
-            <Grid Background="White">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-
-                <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="基本信息" FontSize="16" FontWeight="Bold" Foreground="{DynamicResource PrimaryBrush}" Margin="-277,0,-132,16" />
-
-                <hc:TextBox Grid.Column="0"
-                    x:Name="UsernameTextBox"
-                    hc:InfoElement.Placeholder="用户名"
-                    hc:InfoElement.TitleWidth="0"
-                    hc:InfoElement.Necessary="True"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="-305,6,50,84" Grid.Row="1" />
-
-                <hc:TextBox Grid.Column="1"
-                    x:Name="FullNameTextBox"
-                    hc:InfoElement.Placeholder="姓名"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="4,6,-290,84" Grid.Row="1" />
-
-                <hc:TextBox
-                    Grid.Row="1"
-                    x:Name="EmailTextBox"
-                    hc:InfoElement.Placeholder="邮箱"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="-305,74,59,30" Grid.RowSpan="3" />
-
-                <hc:TextBox
-                    Grid.Row="1" Grid.Column="1"
-                    x:Name="DepartmentTextBox"
-                    hc:InfoElement.Placeholder="部门"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="4,74,-290,21" />
-
-                <hc:TextBox
-                    Grid.Row="2"
-                    x:Name="PositionTextBox"
-                    hc:InfoElement.Placeholder="职位"
-                    hc:InfoElement.TitleWidth="0"
-                    Style="{StaticResource TextBoxExtend}"
-                    Margin="-305,3,59,70" Grid.RowSpan="3" />
-
-                <hc:ProgressButton
-                    Grid.Row="4"
-                    x:Name="IsActiveToggle"
-                    
-                    Style="{StaticResource ToggleButtonSwitch}"
-                    Margin="52,6,-106,64" Grid.Column="1" />
-
-
-                <TextBlock Grid.Row="4" Grid.ColumnSpan="2" Text="分配角色" FontSize="16" FontWeight="Bold" Foreground="{DynamicResource PrimaryBrush}" Margin="-305,53,-132,33" />
-
-                <Border Grid.Row="6" Grid.ColumnSpan="2" 
-                        BorderBrush="{DynamicResource BorderBrush}" 
-                        BorderThickness="1" 
-                        CornerRadius="4"
-                        Margin="0,0,0,0">
-                    <ListBox
-                        x:Name="RolesListBox"
-                        SelectionMode="Multiple"
-                        BorderThickness="0"
-                        Background="Transparent" Margin="-321,-31,-279,-55">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <CheckBox
-                                    Content="{Binding Name}"
-                                    IsChecked="{Binding IsSelected, Mode=TwoWay}"
-                                    Tag="{Binding Id}"
-                                    Margin="8,8" />
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Border>
-
-
-                <StackPanel Grid.Row="8" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,16,0,0">
-                    <Button
-                        Content="取消" 
-                        Style="{StaticResource ButtonDefault}"
-                        Click="closeUserDialog"
-                        RenderTransformOrigin="0.57,5.346" />
-                    <Button
-                        Content="保存" 
-                        Style="{StaticResource ButtonPrimary}" 
-                        Command="{Binding ViewModel.AddUsersCommand, Mode=OneWay}"
-  CommandParameter="DialogsAndFlyouts" />
-                </StackPanel>
-            </Grid>
-        </hc:Dialog>
+      
     </Grid>
 </Page>
