--- a/YingCaiAi/YingCaiAiWin/Views/Pages/BrowserCrawlerPage.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/BrowserCrawlerPage.xaml
@@ -22,8 +22,8 @@
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
-        <wv2:WebView2 x:Name="MyBrowser"  Grid.Column="0" Margin="20"  Source="https://www.zhaopin.com" />
-
+        <wv2:WebView2 x:Name="MyBrowser"  Grid.Column="0" Margin="20"  Source="https://chat.baidu.com/search"  />
+        <!--<wv2:WebView2 x:Name="MyBrowser1"  Grid.Column="0" Margin="20"  Source="https://chat.baidu.com/search" Visibility="Collapsed"  />-->
         <!-- 控制面板 -->
         <Grid Margin="20"  Grid.Column="1">
             <Grid.RowDefinitions>
@@ -43,10 +43,13 @@
             </Grid.ColumnDefinitions>
 
            
-            <TextBlock Grid.Row="0" Grid.Column="0" FontFamily="block"  FontWeight="Black"   VerticalAlignment="Center" Text="地址:" />
-            <TextBox Grid.Row="0" Grid.Column="1" Height="40" Margin="0,4" x:Name="UrlTextBox" Text="https://www.zhaopin.com/" />
+         
+            <TextBlock Grid.Row="0" Grid.Column="0" FontFamily="Comic Sans MS" FontWeight="Black" VerticalAlignment="Center" Text="选择地址:" />
+            <ComboBox Grid.Row="0" Grid.Column="1" Height="40" Margin="0,4" x:Name="UrlTextBox">
+                <ComboBoxItem Content="智联：https://www.zhaopin.com/"  IsSelected="True"  />
+                <ComboBoxItem Content="BOSS: https://www.zhipin.com/" />
+            </ComboBox>
 
-        
             <TextBlock Grid.Row="1" Grid.Column="0" FontFamily="block"  FontWeight="Black"   VerticalAlignment="Center" Text="关键词:" />
             <TextBox Grid.Row="1" Grid.Column="1" Height="40" Margin="0,4"  x:Name="KeywordTextBox" />
             
@@ -77,9 +80,19 @@
                 <ComboBoxItem Content="50"    />
                 <ComboBoxItem Content="100" />
             </ComboBox>
-           
-            <ui:Button Grid.Row="7" Grid.Column="1"  Appearance="Primary" Click="Go_Click" Content="开始执行"/>
-
+            <Grid Grid.Row="7" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <ui:Button Grid.Row="0" Grid.Column="0"  Appearance="Primary" Click="Go_Click"  Content="开始执行"/>
+                <ui:Button Grid.Row="0" Grid.Column="1"  Appearance="Primary" Click="Phone_Click" Background="CadetBlue" Content="获取号码"/>
+            </Grid>
+          
             <TextBlock Grid.Row="9" Grid.Column="0"  FontFamily="Comic Sans MS" FontWeight="Black" VerticalAlignment="Center" Text="日志:" />
             <RichTextBox Grid.Row="9" Grid.Column="1" Margin="0,20,0,0" Height="300"   x:Name="StatusTextBlock" IsReadOnly="True" />
         </Grid>
